--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+	--step--2: clamp(0.78rem, calc(0.77rem + 0.03vw), 0.8rem);
+	--step--1: clamp(0.94rem, calc(0.92rem + 0.11vw), 1rem);
+	--step-0: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);
+	--step-1: clamp(1.35rem, calc(1.28rem + 0.37vw), 1.56rem);
+	--step-2: clamp(1.62rem, calc(1.5rem + 0.58vw), 1.95rem);
+	--step-3: clamp(1.94rem, calc(1.77rem + 0.87vw), 2.44rem);
+	--step-4: clamp(2.33rem, calc(2.08rem + 1.25vw), 3.05rem);
+	--step-5: clamp(2.8rem, calc(2.45rem + 1.77vw), 3.82rem);
+}
+
+body {
+	font-family: 'Exo 2', serif, system-ui, -apple-system, BlinkMacSystemFont,
+		'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+		sans-serif;
+}
